--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hladeiro <hladeiro@student.42lisboa.com>   +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/03/25 22:46:37 by hladeiro          #+#    #+#              #
+#    Updated: 2025/03/25 22:46:39 by hladeiro         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = brains
 CC = c++
 FLAGS = -std=c++98 -Wall -Wextra -Werror
