adding main for exercice 2

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,36 +1,23 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: hladeiro <hladeiro@student.42lisboa.com>   +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/03/25 22:46:37 by hladeiro          #+#    #+#              #
-#    Updated: 2025/03/25 22:46:39 by hladeiro         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
-
-NAME = brains
+NAME = megaphone
 CC = c++
 FLAGS = -std=c++98 -Wall -Wextra -Werror
-SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC = megaphone.cpp
 OBJ = $(SRC:.cpp=.o)
-
 
 %.o: %.cpp
 	$(CC) $(FLAGS) -c $< -o $@
 
-all: $(NAME)
+all : $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(OBJ) -o $(NAME) $(FLAGS)
 
 clean:
-	@rm -f $(OBJ)
-	@echo "Objects Removed"
+	@rm -rf $(OBJ)
+	@echo "Objects clean"
 
 fclean: clean
-	@rm -f $(NAME)
+	@rm -rf $(NAME)
 	@echo "Executable removed"
 
 re: fclean all
