--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,23 +1,24 @@
-NAME = phonebook
+NAME = hord
 CC = c++
 FLAGS = -std=c++98 -Wall -Wextra -Werror
-SRC = main.cc Contact.cc PhoneBook.cc
-OBJ = $(SRC:.cc=.o)
+SRC = main.cpp Zombie.cpp zombieHorde.cpp
+OBJ = $(SRC:.cpp=.o)
+
 
 %.o: %.cpp
 	$(CC) $(FLAGS) -c $< -o $@
 
-all : $(NAME)
+all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(OBJ) -o $(NAME) $(FLAGS)
 
 clean:
-	@rm -rf $(OBJ)
-	@echo "Objects clean"
+	@rm -f $(OBJ)
+	@echo "Objects Removed"
 
 fclean: clean
-	@rm -rf $(NAME)
+	@rm -f $(NAME)
 	@echo "Executable removed"
 
 re: fclean all
