Last exercice creation!

--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -13,5 +13,23 @@
 NAME = harl
 CXX = c++
 FLAGS = -std=c++98 -Wall -Wextra -Werror
-SRC = main.cpp
+SRC = main.cpp Harl.cpp
+OBJ = $(SRC:.cpp=.o)
 
+%.o: %.cpp
+	$(CXX) $(FLAGS) -c $< -o $@
+
+all: $(NAME)
+
+$(NAME) : $(OBJ)
+	$(CXX) $(OBJ) -o $(NAME) $(FLAGS)
+
+clean:
+	@rm -rf $(OBJ)
+	@echo "Objects clean"
+
+fclean: clean
+	@rm -rf $(NAME)
+	@echo "Executable removed"
+
+re: fclean all
