--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = harl
+NAME = harlFilter
 CXX = c++
 FLAGS = -std=c++98 -Wall -Wextra -Werror
 SRC = main.cpp Harl.cpp
